JS datei in einfache, lange datei umgewandelt, um module probleme ignorieren zu können

--- a/partietabelle.html
+++ b/partietabelle.html
@@ -207,7 +207,7 @@
                 <div class="col-xs-10 col-sm-10 col-md-8"> 
                   <div class="btn-group pt-2 pb-2"> 
                     <div class="p-1"> 
-                      <button type="button" id="submitRoundButton" class="btn btn-primary" onclick="submitRunde()">
+                      <button type="button" id="submitRundeButton" class="btn btn-primary">
                         <i class="bi-box-arrow-in-down pe-1"></i>
                         Finish round 
                         <span id="submitRoundNumber">
@@ -333,19 +333,14 @@
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-1 space" id="spaceEnd">
 		</div>
 	</div>
-<<<<<<< HEAD
-  <p>
+
     
-  </p>
-  <script>console.log('Hello World')</script>
-=======
 
   <p>
     
   </p>
-  <button onclick="test()"></button>
->>>>>>> 9551be3b73441048310df3548e3a8b4c29a2b58c
-  <script type="module" src="partietabelle_bauen.js"></script>
+  <button Id="testbutton"> Testenfskglhhhhhhhhhhhhh </button>
+  <script src="test.js"></script>
 </body>
 
 </html>
