--- a/partietabelle_beispiel.html
+++ b/partietabelle_beispiel.html
@@ -301,8 +301,7 @@
                   <div class="card">
                     <div class="row" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="b">
                       <div class="col-8 align-self-center p-1">
-                        <span class="position-relative">
-                          30
+                        <span class='punkteelement'>30</span>
                         </span>
                       </div>
                       <div class="col-2 p-1">
