--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,7 @@
         justify-content: center;
         align-items: center;
         background-image: linear-gradient(black, white);
-        background-image: url("wizardgame.jpg");
+        background-image: url("/static/wizardgame.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: 100vw;
