Added a few db_management commands, and implemented conceptual connections of frontend with backend

--- a/frontend/partietabelle_beispiel.html
+++ b/frontend/partietabelle_beispiel.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/static/style.css" />
   <title>WIZARD</title>
   <script type="importmap">
     {
@@ -615,7 +615,7 @@
     
   </p>
   <script>console.log('Hello World')</script>
-  <script type="module" src="partietabelle_bauen.js"></script>
+  <script type="module" src="/static/partietabelle_bauen.js"></script>
 </body>
 
 </html>
