--- a/frontend/test.html
+++ b/frontend/test.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <button Id="testbutton"> Testen </button>
-    <script src="test.js"></script>
+    <script src="/static/test.js"></script>
 </body>
 </html>
