--- a/frontend/partietabelle.html
+++ b/frontend/partietabelle.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WIZARD</title>
-  <link rel='stylesheet' href='partietabelle.css'>
+  <link rel='stylesheet' href='/static/partietabelle.css'>
   <script type="importmap">
     {
       "imports": {
@@ -78,7 +78,7 @@
 
   <script src="https://unpkg.com/lucide@latest"></script>
   <script>lucide.createIcons();</script>
-  <script src="test.js"></script>
+  <script src="/static/test.js"></script>
 </body>
 
 </html>
