--- a/partietabelle.html
+++ b/partietabelle.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="de">
 
+<!-- Using bootstrap, see https://www.jsdelivr.com/package/npm/bootstrap-->
+<!-- For all things like tables, forms, buttons, modals, tooltips, etc. see https://getbootstrap.com/docs/5.3/getting-started/introduction/-->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="style.css" />
   <title>WIZARD</title>
   <script type="importmap">
@@ -18,9 +22,9 @@
   
   
 <body>
-  <div id="title" class="d-flex justify-content-center p-2 bg-wizardscore">
-    Hier kommt der header hin
-  </div>
+  <h1 id="title" class="d-flex justify-content-center p-2 bg-wizardscore">
+    WIZARD Score Sheet
+  </h1>
   <div id="navContainer" class="container">
   	<div class="row"> 	
     	<div class="col-xs-0 col-sm-0 col-md-2 col-lg-3"></div> 
@@ -43,7 +47,7 @@
                       <span id="roundInfo2">
                         Jeder Spieler bekommt 
                         <span class="currentRound">
-                          2
+                          
                         </span> 
                         Karten
                       </span>
@@ -285,7 +289,7 @@
           </div> 
         </div> 
       </div>
-      <div id="supportContainer" class="container text-cemter p-2">
+      <div id="supportContainer" class="container text-center p-2">
         <div class="row">
           <div class="col-12 pt-3">
             <div class="row">
@@ -338,8 +342,8 @@
   <p>
     
   </p>
-  <script>console.log('Hello World')</script>
-  <script type="module" src="partietabelle_bauen.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script type="module" src="punktetabelle_bauen.js"></script>
 </body>
 
 </html>
