--- a/partietabelle_beispiel.html
+++ b/partietabelle_beispiel.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="style.css" />
   <title>WIZARD</title>
   <script type="importmap">
@@ -562,7 +564,7 @@
           </div> 
         </div> 
       </div>
-      <div id="supportContainer" class="container text-cemter p-2">
+      <div id="supportContainer" class="container text-center p-2">
         <div class="row">
           <div class="col-12 pt-3">
             <div class="row">
@@ -615,8 +617,8 @@
   <p>
     
   </p>
-  <script>console.log('Hello World')</script>
-  <script type="module" src="partietabelle_bauen.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script type="module" src="punktetabelle_bauen.js"></script>
 </body>
 
 </html>
